// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelCellAttachmentImage should render the component with className from inherited props 1`] = `
<DocumentFragment>
  <div
    class="dummy-class"
  >
    baz
  </div>
</DocumentFragment>
`;

exports[`ModelCellAttachmentImage should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  <div>
    -
  </div>
</DocumentFragment>
`;

exports[`ModelCellAttachmentImage should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  <div>
    baz
  </div>
</DocumentFragment>
`;

exports[`ModelCellAttachmentImage should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellAttachmentImage should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellAttachmentImage should render with global override shorthand for model and attribute 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellAttachmentImage uses passed in alt 1`] = `
<DocumentFragment>
  <img
    alt="foo"
    height="50"
    maxwidth="100%"
    src="https://example.com/image.png"
  />
</DocumentFragment>
`;

exports[`ModelCellAttachmentImage uses url for alt as fallback 1`] = `
<DocumentFragment>
  <img
    alt="https://example.com/image.png"
    height="50"
    maxwidth="100%"
    src="https://example.com/image.png"
  />
</DocumentFragment>
`;
